# django_testing_app

./: .gitignore  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
django_testin_app/coronavstech/companies/: admin.py  apps.py  serializer.py  urls.py  views.py
django_testin_app/coronavstech/companies/migrations/: 0001_initial.py
django_testin_app/coronavstech/coronavstech/: settings.py  urls.py
tests/: test_api.py  test_django_testin_app.py  test_gist.py
